--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,61 @@
+body
+{
+    background: #2d3142;
+    font-family: "Poppins", sans-serif;
+
+}
 .container {
-    max-width: 600px;
+    max-width: 75%;
     margin: 50px auto;
     text-align: center;
 }
 
-input[type="text"] {
-    padding: 10px;
+input[type="text"] 
+{
+    padding: 20px;
     width: 60%;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 button {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
+    padding: 20px;
+    background-color: #EF8354;
+    color: #2d3142;
     border: none;
     cursor: pointer;
+    font-family: "Poppins", sans-serif;
 }
 
 #weatherDetails {
     margin-top: 20px;
-    border: 1px solid #ccc;
+    border: 2px solid #2d3142;
     padding: 20px;
-    border-radius: 5px;
+    border-radius: 10px;
+    font-family: "Poppins", sans-serif;
 }
 
 .hidden {
     display: none;
+}
+
+h1
+{
+    font-family: "Poppins", sans-serif;
+    color: #FFFFFF;
+}
+
+#cityInput
+{
+    font-family: "Poppins", sans-serif;
+}
+
+.footer
+{
+    max-width: 50%;
+    margin: 35% auto;
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+    font-weight: 200;
+    font-size: 8px;
+    color: #FFFFFF
 }
