--- a/styles.css
+++ b/styles.css
@@ -27,11 +27,15 @@ button {
 }
 
 #weatherDetails {
-    margin-top: 20px;
+    margin-top: 30px;
     border: 2px solid #2d3142;
     padding: 20px;
     border-radius: 10px;
     font-family: "Poppins", sans-serif;
+    font-size: 65%;
+    align-items: center;
+    color:#FFFFFF ;
+    font-weight: 100;
 }
 
 .hidden {
@@ -55,7 +59,16 @@ h1
     margin: 35% auto;
     text-align: center;
     font-family: "Poppins", sans-serif;
-    font-weight: 200;
-    font-size: 8px;
+    font-weight: 100;
+    font-size: 10px;
     color: #FFFFFF
 }
+ img
+ {
+    width: 8%;
+ }
+ .row
+ {
+    display: inline-grid;
+    column-gap: 10px;
+ }
